// common proto classes used by other proto files

syntax = "proto3";
package common.common;

message Airport {
    string airport = 2;
}

enum Trip {
    UNKNOWN_TRIP = 0;
    ROUND_TRIP = 1;
    ONE_WAY = 2;
    MULTI_CITY = 3; // not implemented
}

enum Passenger {
    UNKNOWN_PASSENGER = 0;
    ADULT = 1;
    CHILD = 2;
    INFANT_IN_SEAT = 3;
    INFANT_ON_LAP  = 4;
}

enum Seat {
    UNKNOWN_SEAT = 0;
    ECONOMY = 1;
    PREMIUM_ECONOMY = 2;
    BUSINESS = 3;
    FIRST = 4;
}