syntax = "proto3";

import "common.proto";


// root message that captures all the data
message Info {
    repeated Itinerary itineraries = 3;
    repeated common.common.Passenger passengers = 8;
    common.common.Seat seat = 9;
    common.common.Trip trip = 19;
  }


message Itinerary {
  string date = 2;
  optional Flight outboundFlight = 4; // optional because the outbound flight itself doesn't have it, only return
  optional int32 maxStops = 5;
  common.common.Airport fromAirport = 13;
  common.common.Airport toAirport = 14;
}

message Flight {
    string fromAirport = 1;
    string date = 2;
    string toAirport = 3;
    string airlineCode = 5;
    string flightNumber = 6;
}
